fixed footer width overflowing - 71

--- a/devU-client/src/components/misc/footer.scss
+++ b/devU-client/src/components/misc/footer.scss
@@ -4,11 +4,6 @@
   background-color: $primary;
   color: #fff;
   text-align: left;
-  width: 100%;
-  // position: fixed;
-  // bottom: 0;
-  // left: 0;
-  position: relative;
   margin-top: auto;
   font-size: 14px;
   font-size: 16px;
